tests/models/enum/unnamed/u8/pass/gt.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(gt = 2)]
        u8
    ),
}
fn main() {}
